k8s/php/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
  labels:
    run: SERVICE_NAME
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: SERVICE_NAME
