k8s/php/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SERVICE_NAME
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: SERVICE_NAME.bendingtherules.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: SERVICE_NAME
            port:
              number: 80
